--- a/libreblackjack.ini
+++ b/libreblackjack.ini
@@ -11,3 +11,4 @@ card_format = utf8_single   ; either utf8, utf8_single, ascii, value or tag
 flatbet = 1                 ; always bet one unit
 no_insurance = 1            ; do not ask for insurance
 delay = 0.4                 ; time delay for real-time play
+decks = -1                  ; number of decks, negative means infinite
