function pointers instead of case

--- a/libreblackjack.ini
+++ b/libreblackjack.ini
@@ -10,10 +10,9 @@ card_format = utf8_single   ; either utf8, utf8_single, ascii, value or tag
 ; arranged_cards = 9 4 22   ; uncomment to arrange cards
 flatbet = 1                 ; always bet one unit
 no_insurance = 1            ; do not ask for insurance
-; delay = 0.4                 ; time delay for real-time play
+delay = 0.4                 ; time delay for real-time play
 decks = -1                  ; number of decks, negative means infinite
 
 dealer2player = internal
-player2dealer = internal
-
+; player2dealer = internal
 log = internal.log
