--- a/libreblackjack.ini
+++ b/libreblackjack.ini
@@ -7,12 +7,11 @@ card_format = utf8_single   ; either utf8, utf8_single, ascii, value or tag
 ; value,       // the value for the game, A = 11, J,Q,K=10 or ran
 ; tag,         // integer between 1--52: tag = 13*suit + rank
 
-; arranged_cards = 9 4 22   ; uncomment to arrange cards
+; arranged_cards = 10 8 23    ; uncomment to arrange cards
 flatbet = 1                 ; always bet one unit
 no_insurance = 1            ; do not ask for insurance
-delay = 0.4                 ; time delay for real-time play
 decks = -1                  ; number of decks, negative means infinite
 
-dealer2player = internal
+; dealer2player = internal
 ; player2dealer = internal
-log = internal.log
+; log = internal.log
