--- a/libreblackjack.ini
+++ b/libreblackjack.ini
@@ -1,17 +1,21 @@
 ; sample ini file
 
-card_format = utf8_single   ; either utf8, utf8_single, ascii, value or tag
+; either utf8, utf8_single, ascii, value or tag
+card_format = utf8_single   
 ; utf8,        // one ascii char for the rank and one utf8 representation of the suit ♠,♥,♦,♣
 ; utf8_single, // a single utf8 entity for the card <https://www.unicode.org/charts/PDF/U1F0A0.pdf>
 ; ascii,       // two ascii chars, one for the rank A,2,...,T,J,Q,J and one for the suit S,H,D,C
 ; value,       // the value for the game, A = 11, J,Q,K=10 or ran
 ; tag,         // integer between 1--52: tag = 13*suit + rank
 
-; arranged_cards = 10 8 23    ; uncomment to arrange cards
-flatbet = 1                 ; always bet one unit
-no_insurance = 1            ; do not ask for insurance
-decks = -1                  ; number of decks, negative means infinite
+; uncomment to arrange cards
+; arranged_cards = 10 8 23  
 
-; dealer2player = internal
-; player2dealer = internal
-; log = internal.log
+; do not ask for bets
+flat_bet
+
+; do not ask for insurance
+no_insurance
+
+; number of decks, negative means infinite
+decks = 1                  
