--- a/libreblackjack.ini
+++ b/libreblackjack.ini
@@ -9,13 +9,13 @@ card_format = utf8_single
 ; tag,         // integer between 1--52: tag = 13*suit + rank
 
 ; uncomment to arrange cards
-; arranged_cards = 10 8 23  
+arranged_cards = 1 5 14 9 27
 
 ; do not ask for bets
-flat_bet
+flat_bet = 1
 
 ; do not ask for insurance
-no_insurance
+no_insurance = 1
 
 ; number of decks, negative means infinite
 decks = 1                  
