--- a/libreblackjack.ini
+++ b/libreblackjack.ini
@@ -9,7 +9,7 @@ card_format = utf8_single
 ; tag,         // integer between 1--52: tag = 13*suit + rank
 
 ; uncomment to arrange cards
-arranged_cards = 1 5 14 9 27
+; arranged_cards = 1 5 14 9 27
 
 ; do not ask for bets
 flat_bet = 1
