--- a/libreblackjack.ini
+++ b/libreblackjack.ini
@@ -1,3 +1,8 @@
+; Copyright (C) 2019 jeremy theler
+; This file is part of libreblackjack.
+; This file is free software: you are free to change and redistribute it.
+; There is NO WARRANTY, to the extent permitted by law.
+
 ; sample ini file
 
 ; either utf8, utf8_single, ascii, value or tag
