removed version.sh

--- a/Makefile.am
+++ b/Makefile.am
@@ -10,7 +10,7 @@ dist_doc_DATA = README
 
 TESTS = 00-internal 02-always-stand 05-no-bust 08-mimic-the-dealer
 LOG_COMPILER = players/check.sh
-EXTRA_DIST = libreblackjack.ini  src/version.sh src/version-vcs.h players $(TESTS)
+EXTRA_DIST = libreblackjack.ini players $(TESTS)
 
 # ACLOCAL_AMFLAGS = $(ACLOCAL_FLAGS)
 bin_PROGRAMS = libreblackjack
@@ -19,6 +19,7 @@ libreblackjack_LDADD = $(all_libraries)
 
 libreblackjack_SOURCES = \
  src/libreblackjack.h \
+ src/version-vcs.h \
  src/utlist.h \
  src/main.c \
  src/cards.c \
@@ -36,7 +37,3 @@ libreblackjack_SOURCES = \
  src/internal.c \
  src/shmem.c \
  src/mqueue.c
-
-version.$(OBJEXT): src/version.h
-version.h: Makefile
-	cd src; ./version.sh; cd ..
