--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,60 @@
+/ABOUT-NLS
+*~
+*.[oa]
+*.cache
+.dirstamp
+
+/.sc-start-sc*
+/aclocal.m4
+/ChangeLog
+/config.h
+/config.in
+/config.log
+/config.status
+/configure
+/doc/*.aux
+/doc/*.dvi
+/doc/*.info*
+/doc/*.log
+/doc/*.pdf
+/doc/*.toc
+/doc/hello.??
+/doc/hello.??s
+/doc/stamp-vti
+/doc/wwwtemp
+/GNUmakefile
+/hello
+/hello-*.tar.*
+/hello.1
+/INSTALL
+/lib
+/m4
+/maint.mk
+/Makefile
+/Makefile.in
+/man/hello.1
+/po-check-1
+/po-check-2
+/po/*.gmo
+/po/*.pot
+/po/.reference
+/po/Makefile
+/po/Makefile.in
+/po/messages
+/po/POTFILES
+/po/stamp-po
+/README-release
+/src/.deps
+/src/.libs
+/stamp-h1
+/stamp.h*
+/test-suite.log
+
+
+config.guess
+config.rpath
+config.sub
+
 .deps
 README
 ChangeLog
