--- a/blackjack.conf
+++ b/blackjack.conf
@@ -1,26 +1,24 @@
-; Copyright (C) 2019 jeremy theler
-; This file is part of libreblackjack.
-; This file is free software: you are free to change and redistribute it.
-; There is NO WARRANTY, to the extent permitted by law.
+# Copyright (C) 2019 jeremy theler
+# This file is part of libreblackjack.
+# This file is free software: you are free to change and redistribute it.
+# There is NO WARRANTY, to the extent permitted by law.
 
-; sample ini file
-
-; either utf8, utf8_single, ascii, value or tag
+# either utf8, utf8_single, ascii, value or tag
 card_format = utf8_single   
-; utf8,        // one ascii char for the rank and one utf8 representation of the suit ♠,♥,♦,♣
-; utf8_single, // a single utf8 entity for the card <https://www.unicode.org/charts/PDF/U1F0A0.pdf>
-; ascii,       // two ascii chars, one for the rank A,2,...,T,J,Q,J and one for the suit S,H,D,C
-; value,       // the value for the game, A = 11, J,Q,K=10 or ran
-; tag,         // integer between 1--52: tag = 13*suit + rank
+# utf8,         one ascii char for the rank and one utf8 representation of the suit ♠,♥,♦,♣
+# utf8_single,  a single utf8 entity for the card <https://www.unicode.org/charts/PDF/U1F0A0.pdf>
+# ascii,        two ascii chars, one for the rank A,2,...,T,J,Q,J and one for the suit S,H,D,C
+# value,        the value for the game, A = 11, J,Q,K=10 or ran
+# tag,          integer between 1--52: tag = 13*suit + rank
 
-; uncomment to arrange cards
-; arranged_cards = 1 5 14 9 27
+# uncomment to arrange cards
+# arranged_cards = 1 5 14 9 27
 
-; do not ask for bets
+# do not ask for bets
 flat_bet = 1
 
-; do not ask for insurance
+# do not ask for insurance
 no_insurance = 1
 
-; number of decks, negative means infinite
+# number of decks, negative means infinite
 decks = 1                  
