--- a/configure.ac
+++ b/configure.ac
@@ -37,6 +37,5 @@ cat << EOF > src/version-conf.h
 #define COMPILER_CFLAGS      "$CFLAGS"
 EOF
 
-#AC_CONFIG_FILES([Makefile doc/Makefile])
-AC_CONFIG_FILES([Makefile po/Makefile.in])
+AC_CONFIG_FILES([Makefile doc/Makefile po/Makefile.in])
 AC_OUTPUT
