--- a/blackjack.conf
+++ b/blackjack.conf
@@ -1,5 +1,5 @@
-# Copyright (C) 2019 jeremy theler
-# This file is part of libreblackjack.
+# Copyright (C) 2016-2020 jeremy theler
+# This file is part of Libre Blackjack.
 # This file is free software: you are free to change and redistribute it.
 # There is NO WARRANTY, to the extent permitted by law.
 
@@ -9,7 +9,7 @@ card_format = utf8_single
 # utf8_single,  a single utf8 entity for the card <https://www.unicode.org/charts/PDF/U1F0A0.pdf>
 # ascii,        two ascii chars, one for the rank A,2,...,T,J,Q,J and one for the suit S,H,D,C
 # value,        the value for the game, A = 11, J,Q,K=10 or ran
-# tag,          integer between 1--52: tag = 13*suit + rank
+# tag,          integer between 1-52, suit between 0-3, rank between 1-13: tag = 13*suit + rank
 
 # uncomment to arrange cards
 # arranged_cards = 1 5 14 9 27
