--- a/players/08-mimic-the-dealer/blackjack.conf
+++ b/players/08-mimic-the-dealer/blackjack.conf
@@ -1,7 +1,8 @@
 hands = 1e5
 decks = 6
 hit_soft_17 = 1
-; rng_seed = 1  # uncomment to obtain the same cards each time
+# uncomment to obtain the same cards each time
+# rng_seed = 1  
 
 player2dealer = fifo mimic_p2d
 dealer2player = fifo mimic_d2p
