--- a/blackjack.conf
+++ b/blackjack.conf
@@ -1,24 +1,20 @@
+# Default Libre Blackjack configuration file
+
 # Copyright (C) 2016-2020 jeremy theler
 # This file is part of Libre Blackjack.
 # This file is free software: you are free to change and redistribute it.
 # There is NO WARRANTY, to the extent permitted by law.
 
-# either utf8, utf8_single, ascii, value or tag
-card_format = utf8_single   
+card_format = utf8_single   # either utf8, utf8_single, ascii, value or tag 
 # utf8,         one ascii char for the rank and one utf8 representation of the suit ♠,♥,♦,♣
 # utf8_single,  a single utf8 entity for the card <https://www.unicode.org/charts/PDF/U1F0A0.pdf>
 # ascii,        two ascii chars, one for the rank A,2,...,T,J,Q,J and one for the suit S,H,D,C
-# value,        the value for the game, A = 11, J,Q,K=10 or ran
+# value,        the value for the game, A = 11, J,Q,K=10 or face number
 # tag,          integer between 1-52, suit between 0-3, rank between 1-13: tag = 13*suit + rank
 
-# uncomment to arrange cards
+# uncomment the following line to arrange cards
 # arranged_cards = 1 5 14 9 27
 
-# do not ask for bets
-flat_bet = 1
-
-# do not ask for insurance
-no_insurance = 1
-
-# number of decks, negative means infinite
-decks = 1                  
+flat_bet = 1       # do not ask for bets
+no_insurance = 1   # do not ask for insurance
+decks = 1          # number of decks, negative means infinite
